# polytunnel

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_KR.md  ROADMAP.md  ROADMAP_KR.md  SECURITY.md  codecov.yml  package-spec.md  polytunnel.toml
.githooks/: pre-commit
.github/workflows/: build.yml  ci.yml  coverage.yml  lint.yml  publish.yml  release.yml  security.yml  test.yml
.icebox/: .gitignore
.icebox/tasks/: 11329684-d248-492a-8c85-88b1e873fcb8.md  16ffa890-dcc0-45d7-8a20-3d33d5fe31cc.md  1823be9b-573b-481f-addc-7d20f23241cf.md  19647954-e9f0-4b60-8a0d-7cd7dcfb3d7d.md  1be08834-a41c-4762-81ac-d3f209c5dc6d.md  215d7147-530e-4ba7-bac3-f5b0552b1b88.md  3143b6ba-1d65-42e9-8c7d-2acbe79cd904.md  3c41e4ca-cc1a-4e83-8c8e-598ad6fb4387.md  4c25924d-d5ae-42bb-a12c-4d8f31912d98.md  4cc685e7-5c99-4c0b-8985-2e9f1f99e105.md  53ad52ce-20b7-40fe-b964-b08f57dd5c55.md  5a405e53-8803-4f94-92b6-4629c52a6817.md  5ca9f8af-945f-4e4f-873c-db07dea6773d.md  6b6880a3-a32f-48a8-abd2-43a9afd7e1e9.md  6e8c5494-71fb-4fa5-89fe-8f23a34576dd.md  715e75bd-0ce9-4783-9c34-e53f1f1d6cb6.md  797e7b82-40a9-43ec-8e39-2d788da05910.md  84130120-c552-4023-bb4c-e5429a80f703.md  930683af-e2eb-4767-9b7a-7e8ff2fc0bfb.md  9679f6ec-c254-4680-8fd9-8a92b0218751.md  9ab21fb7-8ec2-4590-8e26-dc9ed299fe0a.md  9bbe3827-f876-4c5b-82b8-f43833132632.md  9ee1bdbd-18a2-42f8-939f-1b9360fdeb8c.md  a47f6fca-7099-4eac-a383-734db9ded667.md  b83e6c4f-d4ee-49bd-a27f-6969f5297bbd.md  b90b9378-6dd3-4562-98c6-3e40935e7fe7.md  cac3a7b0-573f-4ece-9b84-079296050eb2.md  ccc08273-7946-47ae-b3f9-922f9cd45704.md  d02ba443-bc0f-4b03-9183-6233688694d4.md  d6374e61-c4f3-47d5-8eb8-1c153fce504f.md  db01a3ec-b981-49c1-998e-216bc382c037.md  e4c3207c-1240-4033-a538-202e6752d26d.md  e8fc2a31-c72a-4ecf-a094-69503d351b4e.md  f3b21bec-ee6c-438c-ac54-e2305b46c9db.md  fe0c6810-5132-4f02-9b1b-645d2bba08d1.md
crates/: README.md
crates/polytunnel/: Cargo.toml
crates/polytunnel-build/: Cargo.toml
crates/polytunnel-build/src/: classpath.rs  compiler.rs  error.rs  incremental.rs  lib.rs  orchestrator.rs  test_runner.rs
crates/polytunnel-build/tests/: build_integration_tests.rs  build_orchestrator_advanced_tests.rs  build_orchestrator_tests.rs  build_performance_integration_tests.rs  build_scenarios_tests.rs  classpath_integration_tests.rs  classpath_tests.rs  compiler_integration_tests.rs  compiler_tests.rs  incremental_integration_tests.rs  incremental_tests.rs  orchestrator_integration_tests.rs  test_runner_integration_tests.rs  test_runner_tests.rs
crates/polytunnel-core/: Cargo.toml
crates/polytunnel-ide/: Cargo.toml
crates/polytunnel-ide/src/: error.rs  lib.rs  vscode.rs
crates/polytunnel-ide/tests/: vscode_edge_tests.rs  vscode_gen_test.rs
crates/polytunnel-maven/: Cargo.toml
crates/polytunnel-maven/src/: client.rs  coordinate.rs  error.rs  lib.rs  pom.rs
crates/polytunnel-maven/tests/: coordinate_tests.rs  dependency_handling_tests.rs  maven_client_api_tests.rs  maven_client_logic_tests.rs  maven_client_reqwest_tests.rs  maven_integration_tests.rs  pom_tests.rs
crates/polytunnel-resolver/: Cargo.toml
crates/polytunnel-tui/: Cargo.toml
crates/polytunnel-tui/src/: app.rs  event.rs  lib.rs  ui.rs
crates/polytunnel/src/: cli.rs  commands.rs  main.rs  platform.rs
crates/polytunnel/src/commands/: add.rs  basic.rs  build.rs  init.rs  mod.rs  remove.rs  run.rs  run_test.rs  sync.rs  tests.rs  tree.rs  utils.rs  vscode.rs
crates/polytunnel/tests/: cli_coverage_tests.rs  cli_integration_tests.rs  cli_workflow_integration_tests.rs  command_tests.rs  init_tests.rs  integration_error_handling_tests.rs  main_functionality_tests.rs  platform_tests.rs  run_cli_tests.rs
crates/polytunnel/tests/common/: mod.rs
examples/: README.md
examples/config-validator/: README.md  polytunnel.toml
scripts/: e2e-scenarios.sh  setup-hooks.sh  setup-precommit.sh  test-examples.sh
(+57 files in other folders)
