[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/pista/polytunnel"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
quick-xml = { version = "0.37", features = ["serialize"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
semver = "1.0"
indicatif = "0.17"
walkdir = "2.4"
sha2 = "0.10"
tempfile = "3.10"
