[package]
name = "polytunnel-build"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
polytunnel-core.path = "../polytunnel-core"
polytunnel-maven.path = "../polytunnel-maven"
polytunnel-resolver.path = "../polytunnel-resolver"

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true

walkdir = "2.4"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.10"
