[package]
name = "polytunnel"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pt"
path = "src/main.rs"

[dependencies]
polytunnel-core.path = "../polytunnel-core"
polytunnel-resolver.path = "../polytunnel-resolver"
polytunnel-build.path = "../polytunnel-build"
polytunnel-ide.path = "../polytunnel-ide"
clap.workspace = true
tokio.workspace = true
colored = "2.1"
