[package]
name = "polytunnel"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pt"
path = "src/main.rs"

[dependencies]
polytunnel-core.path = "../polytunnel-core"
polytunnel-maven.path = "../polytunnel-maven"
polytunnel-resolver.path = "../polytunnel-resolver"
polytunnel-build.path = "../polytunnel-build"
polytunnel-ide.path = "../polytunnel-ide"
clap.workspace = true
tokio.workspace = true
colored = "2.1"
color-eyre = "0.6.5"
[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
